--- a/src/Illallangi.ShellLink/Illallangi.ShellLink.csproj
+++ b/src/Illallangi.ShellLink/Illallangi.ShellLink.csproj
@@ -65,7 +65,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AssemblyInfo.cs">
+    <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ShellLinkNative.cs">
